--- a/metrics/firefox_desktop/index.html
+++ b/metrics/firefox_desktop/index.html
@@ -3849,7 +3849,8 @@
     we received a main ping from each day. To be comparable to DAU used for KPI
     tracking, this metric needs to be aggregated by <code>submission_date</code>. If the
     metric is NOT aggregated by <code>submission_date</code>, the metric is similar to a 
-    "days of use" metric.</p>
+    "days of use" metric. For more details, refer to
+    <a href="https://docs.telemetry.mozilla.org/concepts/terminology.html#dau">the DAU description in the Mozilla Data Documentation</a>.</p>
 <pre><code>For questions, please contact bochocki@mozilla.com or firefox-kpi@mozilla.com.
 </code></pre>
 <p>Data Source: <a href="https://mozilla.github.io/metric-hub/data_sources/firefox_desktop/#clients_daily"><code>clients_daily</code></a></p>
