--- a/data_sources/firefox_desktop/index.html
+++ b/data_sources/firefox_desktop/index.html
@@ -2043,8 +2043,8 @@
 
 <hr />
 <h3 id="clients_daily"><a href="#clients_daily">clients_daily</a></h3>
-<p>Client ID column: <code>None</code></p>
-<p>Submission Date column: <code>None</code></p>
+<p>Client ID column: <code>client_id</code></p>
+<p>Submission Date column: <code>submission_date</code></p>
 <details>
 <summary>Definition:</summary>
 
