--- a/functions/index.html
+++ b/functions/index.html
@@ -1931,7 +1931,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f461bef0ca0&gt;, definition='COALESCE(SUM({select_expr}), 0)')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f203bb6aca0&gt;, definition='COALESCE(SUM({select_expr}), 0)')
 </code></pre>
 
 </details>
@@ -1944,7 +1944,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f461bef0d30&gt;, definition='COALESCE(LOGICAL_OR({select_expr}), FALSE)')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f203bb6ad30&gt;, definition='COALESCE(LOGICAL_OR({select_expr}), FALSE)')
 </code></pre>
 
 </details>
@@ -1957,7 +1957,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f461bef0dc0&gt;, definition='    SAFE_DIVIDE(\n        SUM(CAST(JSON_EXTRACT_SCALAR({select_expr}, &quot;$.sum&quot;) AS int64)),\n        SUM((SELECT SUM(value) FROM UNNEST(mozfun.hist.extract({select_expr}).values)))\n    )\n')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f203bb6adc0&gt;, definition='    SAFE_DIVIDE(\n        SUM(CAST(JSON_EXTRACT_SCALAR({select_expr}, &quot;$.sum&quot;) AS int64)),\n        SUM((SELECT SUM(value) FROM UNNEST(mozfun.hist.extract({select_expr}).values)))\n    )\n')
 </code></pre>
 
 </details>
@@ -1970,7 +1970,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f461be5be50&gt;, definition='COALESCE(SUM({select_expr}), 0)')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f203bad5e50&gt;, definition='COALESCE(SUM({select_expr}), 0)')
 </code></pre>
 
 </details>
@@ -1981,7 +1981,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f461be0cee0&gt;, definition='COALESCE(LOGICAL_OR({select_expr}), FALSE)')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f203b989ee0&gt;, definition='COALESCE(LOGICAL_OR({select_expr}), FALSE)')
 </code></pre>
 
 </details>
@@ -1992,7 +1992,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f461be0cc10&gt;, definition='    SAFE_DIVIDE(\n        SUM(CAST(JSON_EXTRACT_SCALAR({select_expr}, &quot;$.sum&quot;) AS int64)),\n        SUM((SELECT SUM(value) FROM UNNEST(mozfun.hist.extract({select_expr}).values)))\n    )\n')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f203b989c10&gt;, definition='    SAFE_DIVIDE(\n        SUM(CAST(JSON_EXTRACT_SCALAR({select_expr}, &quot;$.sum&quot;) AS int64)),\n        SUM((SELECT SUM(value) FROM UNNEST(mozfun.hist.extract({select_expr}).values)))\n    )\n')
 </code></pre>
 
 </details>
